// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Letter /> matches disabled snapshot 1`] = `
<DocumentFragment>
  <button
    class="col-4 col-sm-2 col-md-1 btn letter"
    data-testid="letter-button"
    disabled=""
    role="button"
  >
    C
  </button>
</DocumentFragment>
`;

exports[`<Letter /> renders a letter C as an enabled, unused letter 1`] = `
<div>
  <button
    class="col-4 col-sm-2 col-md-1 btn letter"
    data-testid="letter-button"
    role="button"
  >
    C
  </button>
</div>
`;

exports[`<Letter /> renders a letter C as disabled, unused letter 1`] = `
<div>
  <button
    class="col-4 col-sm-2 col-md-1 btn letter"
    data-testid="letter-button"
    disabled=""
    role="button"
  >
    C
  </button>
</div>
`;
